--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "node -r dotenv/config app.js dotenv_config_path=./.env"
   },
   "author": "qbunt",
-  "license": "WTFPL",
+  "license": "MIT",
   "dependencies": {
     "ambient-weather-api": "^0.0.6",
     "dotenv": "^6.0.0",
